# PyWFC

./: .gitignore  README.md  main.py  pyproject.toml
wfc/: rule.py  wave.py
